codepkg/objects/Payment_Request__c.object
<CustomObject>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of Payment Request</description>
        <inlineHelpText>Stage of Payment Request</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Reviewed - Needs Information</fullName>
                </value>
                <value>
                    <fullName>Payment Processing</fullName>
                </value>
                <value>
                    <fullName>Returned Project Payment</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateAdminShare__c</fullName>
        <description>State Share amount for the Project.</description>
        <inlineHelpText>State Share amount for the Project.
[ State Cost Share * State Admin % ( Project ) ]</inlineHelpText>
        <label>State Admin Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StateAmountAvailable__c</fullName>
        <description>Total State Amount available for this Project.</description>
        <formula>Project__r.StateAmountAvailable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total State Amount available for this Project.
[ State Amount Available ( Project ) ]</inlineHelpText>
        <label>State Amount Available(Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StateAmountDisbursed__c</fullName>
        <description>Total State Amount Disbursed for this Project.</description>
        <formula>Project__r.StateAmountDisbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total State Amount Disbursed for this Project.
[ Total State Amount Disbursed ( Project ) ]</inlineHelpText>
        <label>State Amount Disbursed (Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StateCostShareFlag__c</fullName>
        <description>This Flag is used to prevent a PR from being approved until the $2,500 threshold has been met on a project and on a sub recipient for all PA projects within that disaster.</description>
        <formula>IF(OR( ISPICKVAL( Project__r.FundingSource__c , &apos;State Only&apos;) ,ISPICKVAL( Project__r.FundingSource__c , &apos;Federal and State&apos;)), IMAGE ( IF(  Cumulative_State_Cost_Share_Flag__c = false, &quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_green.gif&quot;),&quot;Status Flag&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Flag is used to prevent a PR from being approved until the $2,500 threshold has been met on a project and on a sub recipient for all PA projects within that disaster.</inlineHelpText>
        <label>State Cost Share Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCostShare__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Cost Share of this Project. Visible only for GPU Analyst.</description>
        <inlineHelpText>State Cost Share of this Project.
[ Expenditures to Date * State Share % ( Project ) ]</inlineHelpText>
        <label>State Cost Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StateEstimatedPaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Maximum Estimated State Amount for This Payment Request.</description>
        <inlineHelpText>Maximum Estimated State Amount for This Payment Request.
[ State Cost Share - State Retention - Total State Amount Approved(Project)  + Admin Share Amount(If Applicable)]</inlineHelpText>
        <label>State Estimated Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StateRetentionShare__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Retention Share for the Project.</description>
        <inlineHelpText>State Retention Share for the Project.
[ State Cost Share * State Retention % ( Project ) ]</inlineHelpText>
        <label>State Retention Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Recipient_Email__c</fullName>
        <description>Sub Recipient Email address</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Sub Recipient Email address</inlineHelpText>
        <label>Sub Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sub_Recipient_Name__c</fullName>
        <description>Name of Sub Recipient on Project</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of Sub Recipient on Project</inlineHelpText>
        <label>Sub Recipient Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAdminShareAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Net Admin Amount Available&quot; of the Project.</description>
        <inlineHelpText>&quot;Net Admin Amount Available&quot; of the Project.</inlineHelpText>
        <label>Total Admin Share Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalApprovedPaymentAmount__c</fullName>
        <description>It&apos;s sum of &quot; Approved Federal Payment Amount&quot; and &quot;Approved State Payment Amount&quot;.</description>
        <inlineHelpText>It&apos;s sum of &quot; Approved Federal Payment Amount&quot; and &quot;Approved State Payment Amount&quot;.
[Approved Federal Payment Amount + Approved State Payment Amount]</inlineHelpText>
        <label>Total Approved Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalEstimatedPaymentAmount__c</fullName>
        <description>Sum of Federal Estimated Payment Amount and State Estimated Payment Amount.</description>
        <formula>FederalEstimatedPaymentAmount__c + StateEstimatedPaymentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Federal Estimated Payment Amount and State Estimated Payment Amount.
[ Federal Estimated Payment Amount + State Estimated Payment Amount ]</inlineHelpText>
        <label>Total Estimated Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Admin_Amount_Approved__c</fullName>
        <description>Total Admin Amount Approved on the Project.</description>
        <formula>Project__r.Total_Admin_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Admin Amount Approved on the Project.</inlineHelpText>
        <label>Total Admin Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Admin_Amount_Requested__c</fullName>
        <description>Total Admin Amount Requested on the Project</description>
        <formula>Project__r.Total_Admin_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Admin Amount Requested on the Project</inlineHelpText>
        <label>Total Admin Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Amount_Approved__c</fullName>
        <description>Total Federal Amount Approved on the Project.</description>
        <formula>Project__r.Total_Federal_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Federal Amount Approved on the Project.</inlineHelpText>
        <label>Total Federal Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Amount_Requested__c</fullName>
        <description>Total Federal Amount Requested on the Project.</description>
        <formula>Project__r.Total_Federal_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Federal Amount Requested on the Project.</inlineHelpText>
        <label>Total Federal Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_State_Amount_Approved__c</fullName>
        <description>Total State Amount Approved on the Project.</description>
        <formula>Project__r.Total_State_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total State Amount Approved on the Project.</inlineHelpText>
        <label>Total State Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_State_Amount_Requested__c</fullName>
        <description>Total State Amount Requested on the Project.</description>
        <formula>Project__r.Total_State_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total State Amount Requested on the Project.</inlineHelpText>
        <label>Total State Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payment Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Funding_Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Cumulative_State_Cost_Share_Flag__c</columns>
        <columns>Stage__c</columns>
        <columns>ApprovedStatePaymentAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GPU_Managers</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Funding_Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>StateCostShareFlag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <label>Payment Request - pending Approval</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Payment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Active_Award_Validation</fullName>
        <active>true</active>
        <description>You can only select the Award which is associated with the same Project and in &quot;Active&quot; Stage.</description>
        <errorConditionFormula>AND( NOT( ISPICKVAL( Award__r.Status__c , &apos;Active&apos;) ) ,  OR(ISPICKVAL( Stage__c  , &apos;New&apos;),ISPICKVAL( Stage__c  , &apos;Processing&apos;), ISPICKVAL( Stage__c  , &apos;Reviewed - Needs Information&apos;)) )</errorConditionFormula>
        <errorMessage>You can only select the Award which is associated with the same Project and in &quot;Active&quot; Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_Based_on_Payment_Type</fullName>
        <active>true</active>
        <description>Payment Type. If Standard, Payment amount(Expenditure to Date) must be greater than 0. If Reimbursements, payment amount(Expenditure to Date)  must be less than 0</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND(NOT( OR( ISPICKVAL( Stage__c , &apos;New&apos;), ISPICKVAL( Stage__c , &apos;Processing&apos;), ISPICKVAL( Stage__c , &apos;Reviewed - Needs Information&apos;), ISPICKVAL( Stage__c , &apos;Withdrawn&apos;))  ), OR(AND( ISPICKVAL( PaymentType__c , &apos;Reimbursement&apos;) ,    TotalApprovedPaymentAmount__c &lt; 0),
AND( ISPICKVAL( PaymentType__c , &apos;DeObligation&apos;) ,  TotalApprovedPaymentAmount__c &gt; 0))))</errorConditionFormula>
        <errorDisplayField>TotalApprovedPaymentAmount__c</errorDisplayField>
        <errorMessage>&quot;Total Approved Payment Amount&quot; must be Greater than 0 for &quot;Reimbursement&quot;  Payment Type and must be less than 0 for &quot;De Obligation&quot; Payment Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approved_Federal_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND( NOT( OR(ISPICKVAL( PaymentType__c , &apos;Offset&apos;), ISPICKVAL( PaymentType__c , &apos;Returned Project Payment&apos;),  AND(ISPICKVAL( Project__r.Stage__c , &apos;Closeout&apos;),ISPICKVAL( PaymentType__c , &apos;Final Payment&apos;) ) ) ) ,
    ApprovedFederalPaymentAmount__c &gt; CEILING(FederalEstimatedPaymentAmount__c), ApprovedFederalPaymentAmount__c != 0
))</errorConditionFormula>
        <errorDisplayField>ApprovedFederalPaymentAmount__c</errorDisplayField>
        <errorMessage>&quot;Approved Federal Payment Amount&quot; must not be greater than &quot;Estimated Federal Payment Amount&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approved_State_Payment_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND( NOT(  OR(ISPICKVAL( PaymentType__c , &apos;Offset&apos;), ISPICKVAL( PaymentType__c , &apos;Returned Project Payment&apos;),  AND(ISPICKVAL( Project__r.Stage__c , &apos;Closeout&apos;),ISPICKVAL( PaymentType__c , &apos;Final Payment&apos;) ) ) ) ,
     ApprovedStatePaymentAmount__c &gt; CEILING(StateEstimatedPaymentAmount__c), ApprovedStatePaymentAmount__c != 0
))</errorConditionFormula>
        <errorDisplayField>ApprovedStatePaymentAmount__c</errorDisplayField>
        <errorMessage>&quot;Approved State Payment Amount&quot; must not be greater than &quot;Estimated State Payment Amount&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Award_Field_Validation</fullName>
        <active>true</active>
        <description>Award is mandatory at any stage of Payment Request.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,ISBLANK( Award__c ))</errorConditionFormula>
        <errorDisplayField>Award__c</errorDisplayField>
        <errorMessage>Please select an  active Award.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expenditure_to_date_NA_Validation</fullName>
        <active>true</active>
        <description>Expenditure to Date is not applicable for &quot;Offset/Returned Project Payment&quot; Validation.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) , OR(ISPICKVAL( PaymentType__c ,&apos;Offset&apos;),ISPICKVAL(PaymentType__c ,&apos;Returned Project Payment&apos;)),   AND(  NOT(ISBLANK( ExpenditurestoDate__c ))  ,ExpenditurestoDate__c 
 != 0) )</errorConditionFormula>
        <errorDisplayField>ExpenditurestoDate__c</errorDisplayField>
        <errorMessage>&quot;Expenditure to Date&quot; is not applicable for &quot;Offset/Returned Project Payment&quot; type Payment Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expenditures_to_Date_Validation</fullName>
        <active>true</active>
        <description>Expenditures to Date is mandatory and must not be zero when Stage is Processing</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND(
OR(ISPICKVAL(Stage__c,&apos;Processing&apos;),ISPICKVAL(Stage__c,&apos;Payment Processing&apos;),ISPICKVAL(Stage__c,&apos;Paid&apos;),ISPICKVAL(Stage__c,&apos;In Review&apos;)), 
ISBLANK(ExpenditurestoDate__c)
))</errorConditionFormula>
        <errorDisplayField>ExpenditurestoDate__c</errorDisplayField>
        <errorMessage>Please provide &quot;Expenditures to Date&quot; for Payment Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manager_Approver_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND(
  ISBlank( $User.ManagerId ) ,
  ($Profile.Name &lt;&gt; &apos;System Administrator&apos;)
))</errorConditionFormula>
        <errorMessage>Your user record does not seem to have a manager assigned. Please contact your administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Obligated_Agency_Validation</fullName>
        <active>true</active>
        <description>You must select the &quot;Obligated Agency&quot;, if the Payment Type is &quot;Mutual Aid&quot;.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND( ISPICKVAL( PaymentType__c , &apos;Mutual Aid&apos;) , ISBLANK( ObligatedAgency__c ) ))</errorConditionFormula>
        <errorDisplayField>ObligatedAgency__c</errorDisplayField>
        <errorMessage>You must select the &quot;Obligated Agency&quot; if the Payment Type is &quot;Mutual Aid&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offset_Payment_Validation</fullName>
        <active>true</active>
        <description>Expenditure do date must be negative amount, when Payment Type is &quot;Offset&quot;.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND( ISPICKVAL( PaymentType__c , &apos;Offset&apos;) ,  Project__r.AmountAvailable__c &lt; 0, ExpenditurestoDate__c &gt;0))</errorConditionFormula>
        <errorDisplayField>ExpenditurestoDate__c</errorDisplayField>
        <errorMessage>&quot;Expenditures To Date&quot; must be a negative amount when Payment Type is &quot;Offset&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PR_Withdrawal_Reason</fullName>
        <active>true</active>
        <description>&quot;Reason To Withdraw&quot; is required to mark the Payment Request as &quot;Withdrawn&quot;.</description>
        <errorConditionFormula>AND( ISCHANGED( Stage__c ) , ISPICKVAL( Stage__c , &apos;Withdrawn&apos;) , ISBLANK( Reason_To_Withdraw__c ) )</errorConditionFormula>
        <errorDisplayField>Reason_To_Withdraw__c</errorDisplayField>
        <errorMessage>&quot;Reason To Withdraw&quot; is required to mark the Payment Request as &quot;Withdrawn&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Delivery_Validation</fullName>
        <active>true</active>
        <description>Payment Delivery is mandatory when Stage is Processing</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND(
OR(ISPICKVAL(Stage__c,&apos;Processing&apos;),ISPICKVAL(Stage__c,&apos;Payment Processing&apos;),ISPICKVAL(Stage__c,&apos;Paid&apos;),ISPICKVAL(Stage__c,&apos;In Review&apos;)),   NOT( OR(ISPICKVAL( PaymentType__c ,&apos;Offset&apos;),ISPICKVAL(PaymentType__c ,&apos;Returned Project Payment&apos;))),  
ISBLANK(TEXT(PaymentDelivery__c))))</errorConditionFormula>
        <errorDisplayField>PaymentDelivery__c</errorDisplayField>
        <errorMessage>Please provide &quot;Payment Delivery&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Type_Validation</fullName>
        <active>true</active>
        <description>Payment Type is mandatory when Stage is Processing</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND(
OR(ISPICKVAL(Stage__c,&apos;Processing&apos;),
ISPICKVAL(Stage__c,&apos;In Review&apos;),
ISPICKVAL(Stage__c,&apos;Payment Processing&apos;),
ISPICKVAL(Stage__c,&apos;Paid&apos;)),
ISPICKVAL( PaymentType__c ,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>PaymentType__c</errorDisplayField>
        <errorMessage>Please provide &quot;Payment Type&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reimbursement_End_Date_Validation</fullName>
        <active>true</active>
        <description>Reimbursement End Date is mandatory when Stage is Processing</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND(OR(ISPICKVAL(Stage__c,&apos;Processing&apos;),ISPICKVAL(Stage__c,&apos;Payment Processing&apos;),ISPICKVAL(Stage__c,&apos;Paid&apos;),ISPICKVAL(Stage__c,&apos;In Review&apos;)) ,
NOT( CONTAINS(  Project__r.Program_Name__r.Parent_Program__r.Master_Label_Program_Name__c  , &apos;Public Assistance&apos;) ),
ISPICKVAL( PaymentType__c , &apos;Reimbursement&apos;),
ISBLANK( ReimbursementEndDate__c )
))</errorConditionFormula>
        <errorDisplayField>ReimbursementEndDate__c</errorDisplayField>
        <errorMessage>Please provide &quot;Reimbursement End Date&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reimbursement_Start_Date_Validation</fullName>
        <active>true</active>
        <description>Reimbursement Start Date is mandatory when Stage is Processing</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND(OR(ISPICKVAL(Stage__c,&apos;Processing&apos;),ISPICKVAL(Stage__c,&apos;Payment Processing&apos;),ISPICKVAL(Stage__c,&apos;Paid&apos;),ISPICKVAL(Stage__c,&apos;In Review&apos;)),
NOT( CONTAINS( Project__r.Program_Name__r.Parent_Program__r.Master_Label_Program_Name__c , &apos;Public Assistance&apos;) ),
ISPICKVAL( PaymentType__c , &apos;Reimbursement&apos;),
ISBLANK(ReimbursementStartDate__c)
))</errorConditionFormula>
        <errorDisplayField>ReimbursementStartDate__c</errorDisplayField>
        <errorMessage>Please provide &quot;Reimbursement Start Date&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reimbursment_Start_Date_And_End_Date</fullName>
        <active>true</active>
        <description>Reimbursment end date should be greater than start date</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,ReimbursementEndDate__c &lt;  ReimbursementStartDate__c)</errorConditionFormula>
        <errorDisplayField>ReimbursementEndDate__c</errorDisplayField>
        <errorMessage>&quot;Reimbursement End Date&quot; should be greater than &quot;Reimbursement Start Date&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Returned_Project_Payment_Validation</fullName>
        <active>true</active>
        <description>Approved State Payment Amount/Approved Federal payment Amount cannot be greater than 0 for the &quot;Returned Project Payment&quot; Payment Request.</description>
        <errorConditionFormula>AND( ISPICKVAL( PaymentType__c , &apos;Returned Project Payment&apos;), OR( ApprovedFederalPaymentAmount__c &gt; 0 , ApprovedStatePaymentAmount__c &gt; 0) )</errorConditionFormula>
        <errorMessage>Approved State Payment Amount/Approved Federal Payment Amount cannot be greater than 0 for the &quot;Returned Project Payment&quot; Payment Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_Registration_Date_Validation</fullName>
        <active>true</active>
        <description>This Validation is used to prevent payment when Ob ligating Sub Recipient has expired SAM Registration date.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,AND( ISNEW(),Project__r.Obligating_Sub_Recipient__r.DUNS_Expiration_Date__c &lt; TODAY())
)</errorConditionFormula>
        <errorMessage>Your Obligating Sub Recipient&apos;s &quot;SAM Registration Expiration Date&quot; has lapsed.</errorMessage>
    </validationRules>
</CustomObject>